# synchronous-timer-rs

./: Cargo.toml  LICENSE.txt  README.md
examples/: basic.rs  stress.rs
src/: executor.rs  lib.rs  task.rs  timer.rs
